--- a/app.css
+++ b/app.css
@@ -11,7 +11,7 @@ body {
     background-color: #AAD9FF
 }
 h1 {
-    color: black;
+    color: white;
     text-align: center;
     font-family: 'Permanent Marker', cursive;    
 }
