--- a/app.css
+++ b/app.css
@@ -62,4 +62,36 @@ li {
     background: -moz-linear-gradient(top, #2c6195, #00478e);
     background: linear-gradient(to bottom, #2c6195, #00478e);
 }
+.button {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    padding: 12px 24px;
+    border: 1px solid #0061c1;
+    border-radius: 8px;
+    background: #4aa2f9;
+    background: -webkit-gradient(linear, left top, left bottom, from(#4aa2f9), to(#000478));
+    background: -moz-linear-gradient(top, #4aa2f9, #000478);
+    background: linear-gradient(to bottom, #4aa2f9, #000478);
+    text-shadow: #591717 1px 1px 1px;
+    font: normal normal bold 20px arial;
+    color: #ffffff;
+    text-decoration: none;
+}
+.button:hover,
+.button:focus {
+    border: 1px solid #009bff;
+    background: #59c2ff;
+    background: -webkit-gradient(linear, left top, left bottom, from(#59c2ff), to(#000590));
+    background: -moz-linear-gradient(top, #59c2ff, #000590);
+    background: linear-gradient(to bottom, #59c2ff, #000590);
+    color: #ffffff;
+    text-decoration: none;
+}
+.button:active {
+    background: #2c6195;
+    background: -webkit-gradient(linear, left top, left bottom, from(#2c6195), to(#000478));
+    background: -moz-linear-gradient(top, #2c6195, #000478);
+    background: linear-gradient(to bottom, #2c6195, #000478);
+}
 
